--- a/main.html
+++ b/main.html
@@ -169,12 +169,20 @@
       background: #d8f3dc;
     }
 
+    #exportBtn:hover {
+      background: #d8f3dc;
+      transform: scale(1.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
     #importBtn {
       background: #a5d8ff;
     }
 
     #importBtn:hover {
       background: #d0ebff;
+      transform: scale(1.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .product-images {
@@ -192,7 +200,7 @@
       cursor: pointer;
       transition: transform 0.2s, box-shadow 0.2s;
       border-radius: 10px;
-      background: white;
+      background: transparent;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
 
@@ -224,32 +232,102 @@
     <button id="importBtn" type="button">匯入CSV</button>
     <span id="importMsg" style="color:#d62828;font-size:0.95em;"></span>
   </div>
-  <!-- 價格通知設定區塊 -->
-  <div id="notifySection"
-       style="background:#fff3cd;padding:16px 20px;border-radius:10px;box-shadow:0 2px 8px #0001;max-width:400px;width:100%;margin-bottom:10px;">
-    <b>價格通知設定</b><br>
-    <label>
-      商品名稱：
-      <input type="text" id="notifyName" style="width:120px;">
-    </label>
-    <label>
+  <style>
+    .card-box {
+      background: #faecbd;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px #0001;
+      max-width: 450px;
+      margin-bottom: 16px;
+      font-family: "Segoe UI", sans-serif;
+    }
+
+    .form-row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-top: 10px;
+      flex-wrap: nowrap; /* ⚠️ 防止換行 */
+    }
+
+    .form-row label {
+      white-space: nowrap;
+    }
+
+    .form-row input,
+    .form-row select {
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 0.95em;
+    }
+
+    .form-row button {
+      padding: 6px 12px;
+      border: none;
+      background-color: #333;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      white-space: nowrap;
+    }
+
+    .form-row button:hover {
+      background-color: #555;
+    }
+
+    .delete-btn {
+      background-color: #e63946;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 6px 12px;
+      font-size: 0.95em;
+      cursor: pointer;
+      transition: background-color 0.2s, transform 0.2s, box-shadow 0.2s;
+    }
+
+    .delete-btn:hover {
+      background-color: #c71f2d;
+      transform: scale(1.05);
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+    }
+
+    .delete-btn:active {
+      transform: scale(0.95);
+    }
+
+  </style>
+
+  <!-- 價格通知設定 -->
+  <div class="card-box">
+    <b>價格通知設定</b>
+    <div class="form-row">
+      <label>商品名稱：</label>
+      <input type="text" id="notifyName" style="width:100px;">
       <select id="notifyType">
         <option value="below">低於</option>
         <option value="above">高於</option>
       </select>
-    </label>
-    <input type="number" id="notifyPrice" style="width:80px;" placeholder="價格">
-    <button id="setNotifyBtn" type="button" style="margin-left:8px;">設定</button>
-    <span id="notifyMsg" style="color:#d62828;font-size:0.95em;margin-left:8px;"></span>
+      <input type="number" id="notifyPrice" style="width:80px;" placeholder="價格">
+      <button id="setNotifyBtn" type="button">設定</button>
+    </div>
+    <span id="notifyMsg" style="color:#d62828;"></span>
   </div>
-  <!-- 訂閱 Email 輸入區塊 -->
-  <div id="subscribeSection"
-       style="background:#e3f2fd;padding:16px 20px;border-radius:10px;box-shadow:0 2px 8px #0001;max-width:400px;width:100%;margin-bottom:10px;">
-    <b>訂閱價格通知 Email</b><br>
-    <input type="email" id="subscribeEmail" placeholder="請輸入 Email" style="width:200px;padding:6px;">
-    <button id="subscribeBtn" type="button" style="margin-left:10px;">訂閱</button>
-    <span id="subscribeMsg" style="color:#007f00;font-size:0.95em;margin-left:10px;"></span>
+
+
+  <!-- 訂閱 Email 區塊 -->
+  <div class="card-box blue">
+    <b>訂閱價格通知 Email</b>
+    <div class="form-row">
+      <input type="email" id="subscribeEmail" placeholder="請輸入 Email" style="width:200px;">
+      <button id="subscribeBtn" type="button">訂閱</button>
+    </div>
+    <span id="subscribeMsg" style="color:#007f00;"></span>
   </div>
+
+
   <!-- 表單 -->
   <form id="insertForm">
     <label for="date">日期：</label>
@@ -292,7 +370,7 @@
     <tbody></tbody>
   </table>
   <!-- 折線圖容器 -->
-  <canvas id="lineChart" width="600" height="300" style="margin-top:30px;"></canvas>
+  <canvas id="lineChart" width="1000" height="500" style="margin-top:30px;"></canvas>
   <div id="forecastInfo" style="font-size:1.1em; color:#1d3557; margin-top:10px;"></div>
 </div>
 
